corrected issues with styling
corrected an issue with the footer being too close to the bottom of the viewport. Also corrected multiple issues with the carousel. Fixed the name and descriptions covering the images as well as fixed a bottom padding issue where the active carousel indicator would cut off the bottom of the description.

--- a/src/index.scss
+++ b/src/index.scss
@@ -37,6 +37,7 @@ a.nav-item.nav-link.active {
   bottom: 0;
   width: 100%;
   height: 2.5rem;
+  padding-bottom: 50px;
 }
 
 .pic {
@@ -68,6 +69,7 @@ a.nav-item.nav-link.active {
 	max-width: 800px;
   margin-left: auto;
   margin-right: auto;
+  border-radius: 25px;
 }
 
 @media(prefers-color-scheme: dark) {
@@ -133,11 +135,17 @@ a.nav-item.nav-link.active {
     bottom: 0;
     width: 100%;
     height: 2.5rem;
+    padding-bottom: 50px;
   }
 	
   .carousel {
   	max-width: 800px;
     margin-left: auto;
     margin-right: auto;
+	  border-radius: 25px;
+  }
+
+  .carouselText {
+    padding-bottom: 20px;
   }
 }
